# my-expenses

./: .gitignore  README.md  pyproject.toml  pytest.ini
my_expenses_service_python/domain/expenses/: expenses.py
