[tool.poetry]
name = "my-expenses-service-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", allow-prereleases = true}
pytest-cov = "^4.0.0"
mypy = "^0.982"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
